--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.15",
+    "expo-camera": "~13.2.1",
     "expo-font": "~11.1.1",
     "expo-image-picker": "~14.1.1",
+    "expo-media-library": "~15.2.3",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
@@ -22,9 +24,7 @@
     "react-native-image-picker": "^5.4.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-svg": "13.4.0",
-    "expo-camera": "~13.2.1",
-    "expo-media-library": "~15.2.3"
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
