--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-svg": "13.4.0",
     "react-redux": "^8.1.1",
     "redux-persist": "^6.0.0",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "expo-dev-client": "~2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
